add migration, db init, and set appsettings

--- a/TransactionService/appsettings.Development.json
+++ b/TransactionService/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "AppSettings": {
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#",
-    "UserService": "https://localhost:5001",
-    "DriverService": "https://localhost:6001"
+    "UserUrl": "https://localhost:5001",
+    "DriverUrl": "https://localhost:6001"
   },
   "ConnectionStrings": {
     "LocalConnection": "Server=localhost,1433;Database=TransactionDb;User=SA;Password=Kosongkan@Saja;"
