--- a/TransactionService/appsettings.Production.json
+++ b/TransactionService/appsettings.Production.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#",
-    "AuthUrl": "http://auth-clusterip-srv:80"
+    "UserUrl": "https://localhost:5001",
+    "DriverUrl": "https://localhost:6001"
   },
   "ConnectionStrings": {
     "ProdConn": "Server=mssql-clusterip-srv,1433;Database=TransactionDb;User=SA;Password=Kosongkan@Saja;"
