--- a/AdminService/appsettings.Development.json
+++ b/AdminService/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
+  },
+  "ConnectionStrings": {
+    "LocalConnection": "server=LAPTOP-H4V04E0N\\SQLEXPRESS;database=AdminDb;uid=user2;pwd=user123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
