--- a/UserService/appsettings.Production.json
+++ b/UserService/appsettings.Production.json
@@ -3,7 +3,7 @@
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
   "ConnectionStrings": {
-    "DatabaseConn": "Data Source=.\\SQLEXPRESS;Initial Catalog=UserDb;Integrated Security=SSPI;User Id=sa;Password=aspd1234"
+    "DatabaseConn": "Data Source=.\\SQLEXPRESS;Initial Catalog=UserDb;Integrated Security=SSPI;MultipleActiveResultSets=true;User Id=sa;Password=aspd1234"
   },
   "Logging": {
     "LogLevel": {
