--- a/AdminService/appsettings.Development.json
+++ b/AdminService/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
   "ConnectionStrings": {
-    "LocalConnection": "server=LAPTOP-H4V04E0N\\SQLEXPRESS;database=AdminDb;uid=user2;pwd=user123"
+    "LocalConnection": "server=LAPTOP-H4V04E0N\\SQLEXPRESS;database=AdminDb;MultipleActiveResultSets=true;uid=user2;pwd=user123"
   },
   "Logging": {
     "LogLevel": {
