--- a/DriverService/appsettings.Development.json
+++ b/DriverService/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "KafkaConfig": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "AnterAja",
+    "NumPartitions": 1,
+    "ReplicationFactor": 1
+  },
   "AppSettings": {
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
