--- a/UserService/appsettings.Development.json
+++ b/UserService/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
+  "KafkaConfig": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "AnterAja",
+    "NumPartitions": 1,
+    "ReplicationFactor": 1
+  },
   "AppSettings": {
-    "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
+    "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#",
+    "TransactionUrl": "https://localhost:9001"
   },
   "ConnectionStrings": {
-    "DatabaseConn": "Data Source=.\\SQLEXPRESS;Initial Catalog=UserDb;Integrated Security=SSPI;MultipleActiveResultSets=true;User Id=sa;Password=aspd1234"
+    "DatabaseConn": "Server=localhost,1433;Database=UserDb;User=SA;Password=Kosongkan@Saja;"
   },
   "Logging": {
     "LogLevel": {
