--- a/K8S/ingress-srv.yaml
+++ b/K8S/ingress-srv.yaml
@@ -10,13 +10,20 @@ spec:
   - host: AnterAja.com
     http:
       paths:
-      - path: /api/users
+      - path: /api/admin/users
         pathType: Prefix
         backend:
           service:
             name: adminservice-clusterip-srv
             port: 
               number: 80
+      - path: /api/users
+        pathType: Prefix
+        backend:
+          service:
+            name: userservice-clusterip-srv
+            port: 
+              number: 80        
       - path: /api/driverprofiles
         pathType: Prefix
         backend:
@@ -24,7 +31,28 @@ spec:
             name: driverservice-clusterip-srv
             port:
               number: 80
-      - path: api/v1/Transactions
+      - path: /api/users
+        pathType: Prefix
+        backend:
+          service:
+            name: driverservice-clusterip-srv
+            port:
+              number: 80
+      - path: api/v1/transactions
+        pathType: Prefix
+        backend:
+          service:
+            name: transactionservice-clusterip-srv
+            port:
+              number: 80
+      - path: api/v1/prices
+        pathType: Prefix
+        backend:
+          service:
+            name: transactionservice-clusterip-srv
+            port:
+              number: 80
+      - path: api/v1/wallets
         pathType: Prefix
         backend:
           service:
