--- a/DriverService/appsettings.Development.json
+++ b/DriverService/appsettings.Development.json
@@ -9,7 +9,7 @@
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
   "ConnectionStrings": {
-    "DatabaseConn": "Data Source=.\\SQLEXPRESS;Initial Catalog=DriverDb;Integrated Security=SSPI;User Id=sa;Password=aspd1234"
+    "DatabaseConn": "Server=localhost,1433;Database=DriverDb;User=SA;Password=Kosongkan@Saja;"
   },
   "Logging": {
     "LogLevel": {
