--- a/AdminService/appsettings.Production.json
+++ b/AdminService/appsettings.Production.json
@@ -3,7 +3,7 @@
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
   "ConnectionStrings": {
-    "LocalConnection": "server=LAPTOP-H4V04E0N\\SQLEXPRESS;database=AdminDb;uid=user2;pwd=user123"
+    "DatabaseConn": "Server=mssql-clusterip-srv,1433;Database=AdminDb;User=SA;Password=Kosongkan@Saja;"
   },
   "Logging": {
     "LogLevel": {
