add readme, set configuration for 🕸

--- a/AdminService/appsettings.Development.json
+++ b/AdminService/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#"
   },
   "ConnectionStrings": {
-    "LocalConnection": "Server=localhost,1433;Database=UserDb;User=SA;Password=Kosongkan@Saja;"
+    "LocalConnection": "Server=localhost,1433;Database=AdminDb;User=SA;Password=Kosongkan@Saja;"
   },
   "Logging": {
     "LogLevel": {
