--- a/K8S/userservice-depl.yaml
+++ b/K8S/userservice-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: userservice
-        image: dwichynngrm/userservice:latest
+        image: rahmatalhakam/userservice:latest
 ---
 apiVersion: v1
 kind: Service
