update app setting

--- a/DriverService/appsettings.Production.json
+++ b/DriverService/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AppSettings": {
     "Secret": "secret key yang tersedia sekarang adalah ini 123@#$_)(*()@ ?><>...~!@#",
-    "TransactionUrl": "transactionservice-clusterip-srv:80"
+    "TransactionUrl": "http://transactionservice-clusterip-srv:80"
   },
   "ConnectionStrings": {
     "DatabaseConn": "Server=mssql-clusterip-srv,1433;Database=DriverDb;User=SA;Password=Kosongkan@Saja;"
